# strataregula-doe-runner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.md
docs/user-guide/: cases-format.md  cli-reference.md  getting-started.md  metrics-output.md
report/: ANALYSIS_REPORT.md  CI_ERROR_RESOLUTION_REPORT2.md  FINAL_CI_RESOLUTION_SUMMARY.md  observability-fixes.diff  ruff-integration-fixes.diff
scripts/: build_and_test_package.py
src/sr_doe_runner/: __init__.py
src/strataregula_doe_runner/: __init__.py  cli.py  plugin.py
src/strataregula_doe_runner/adapters/: __init__.py  base.py  dummy.py  shell.py
src/strataregula_doe_runner/cli/: __init__.py  main.py
src/strataregula_doe_runner/core/: __init__.py  cache.py  config.py  executor.py  runner.py  validator.py
src/strataregula_doe_runner/io/: __init__.py  csv_handler.py  metrics.py  runlog.py
tests/: test_end_to_end.py
