[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strataregula-doe-runner"
version = "0.1.0"
description = "Batch experiment orchestrator for Strataregula ecosystem"
authors = [
    {name = "Strataregula Team", email = "team@strataregula.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["batch", "experiment", "orchestrator", "csv", "metrics", "strataregula"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "pydantic>=1.8.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]

dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "ruff>=0.1.0",
    "mypy>=0.910",
    "bandit>=1.8.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "myst-parser>=0.15.0",
]

simroute = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/strataregula/strataregula-doe-runner"
Documentation = "https://strataregula-doe-runner.readthedocs.io/"
Repository = "https://github.com/strataregula/strataregula-doe-runner.git"
Issues = "https://github.com/strataregula/strataregula-doe-runner/issues"

[project.entry-points."strataregula.plugins"]
"doe_runner" = "strataregula_doe_runner.plugin:DOERunnerPlugin"

[project.scripts]
srd = "strataregula_doe_runner.cli:main"
sr-doe = "strataregula_doe_runner.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples", 
    "/tests",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strataregula_doe_runner"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# isort configuration removed - now handled by ruff

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=strataregula_doe_runner",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "dateutil.*",
    "strataregula_doe_runner.adapters.simroute",
]
ignore_missing_imports = true